# network-auth-rust

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bugReport.yml  featureRequest.yml
.github/workflows/: ci.yml
config/: local.example.php
deploy/nginx/: network-auth-rust.conf
deploy/scripts/: assemble-release-package.sh  build-linux-binary.ps1  cutover-readiness-check.sh  install-runtime-service.sh  php-fallback-readiness-check.sh  post-cutover-final-gate.sh  pre-cutover-final-gate.sh  pre-switch-release-smoke.sh  release-package-check.sh  release-smoke.sh  releaseScriptSelfTest.sh  rollback-to-php-release.sh  switch-nginx-backend.sh  switch-nginx-ssl-backend.sh  switch-release.sh
deploy/systemd/: network-auth-rust.service
docs/: architecture.md  deployment.md  openSourceChecklist.md
public/: 404.html
public/assets/fonts/nunito/: nunitoLatin.css
public/assets/js/: mascot-breathing.js
public/frontend/admin-console/: index.html
public/frontend/admin-console/css/: app.css
public/frontend/admin-console/js/: app.js  http.js  state.js  view.js
public/install/: disclaimer.html  index.html  install.css
public/sub_admin/css/: login.css  theme.css
resources/install/: schema.sql
resources/sdk/cpp/: CMakeLists.txt  README.md
resources/sdk/cpp/examples/: main.cpp
resources/sdk/cpp/include/: AuthCaBundle.hpp  AuthClient.hpp  AuthConfig.hpp  AuthDeviceIdentity.hpp  AuthError.hpp  AuthTypes.hpp
resources/sdk/cpp/src/: AuthClient.cpp  AuthDeviceIdentity.cpp  AuthSupport.cpp  AuthSupport.hpp
resources/sdk/cppPackage/: CMakeLists.txt  README.md
resources/sdk/python/: README.md  pyproject.toml
resources/sdk/python/licenseauth/: __init__.py  client.py  config.py  crypto.py  identity.py
scripts/: adminAppLifecycleParityCheck.php  adminAppSettingsParityCheck.php  adminCardOperationsParityCheck.php  adminCloudStorageParityCheck.php  adminGeneralParityCheck.php  adminMessagesParityCheck.php  adminRemoteApiTokensParityCheck.php  adminRemoteVariablesParityCheck.php  clientSessionParityCheck.php  cloudStorageProviderCredentialSmoke.php  installCardSearchBackfillParityCheck.php  installDatabasePrivilegeSmoke.php  installDatabaseStepParityCheck.php  installLiveDatabaseSmoke.php  installReadonlyParityCheck.php  installSystemStepRustSmoke.php  localParityRegressionSuite.php  localPreProdGate.php  localPreProdGateSelfTest.php  openSourceAudit.ps1  prodCutoverSequenceGate.php  prodCutoverSequenceGateSelfTest.php  publicCardQueryParityCheck.php  publicRuntimeReadinessGate.php  publicRuntimeReadinessGateSelfTest.php  remainingLiveSmokeGate.php  remoteApiAppsParityCheck.php  remoteApiCardsParityCheck.php  remoteApiCloudStorageParityCheck.php  remoteApiConfigParityCheck.php  remoteApiVariablesParityCheck.php
src/: card_search.rs  deploy.rs  error.rs  install.rs  lib.rs  main.rs
src/config/: mod.rs
src/crypto/: mod.rs
src/http/: mod.rs
src/repository/: mod.rs
src/service/: admin.rs  admin_session.rs  client.rs  login.rs  mod.rs  remote_api.rs  remote_lua.rs
src/service/admin/: cards.rs  cloud_storage.rs  messages.rs  remote_api.rs  sdk.rs  variables.rs
storage/cache/: .gitkeep
storage/cloud-storage/: .gitkeep
storage/logs/: .gitkeep
