[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "licenseauthsdk"
version = "1.0.0"
description = "LicenseAuth Python SDK"
requires-python = ">=3.10"
dependencies = ["cryptography>=42.0.0"]

[tool.setuptools.packages.find]
include = ["licenseauth*"]
